--- a/codility_dsa.ipynb
+++ b/codility_dsa.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcQnVD89GqY+RgsNXbhZPL",
+      "authorship_tag": "ABX9TyOVwBRRXyUdl1XZP2UwjZWx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2076,7 +2076,7 @@
       "metadata": {
         "id": "hyoGlh0uQgHb"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2091,7 +2091,7 @@
         },
         "outputId": "b2238d9b-47b5-4eb1-83dc-df7f538cdb9f"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2118,7 +2118,7 @@
       "metadata": {
         "id": "5QyXDKl1FLq7"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2133,7 +2133,7 @@
         "id": "VJiicITWFLoW",
         "outputId": "a2345cd1-1863-41d5-bdd2-da553af0162d"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2160,7 +2160,7 @@
       "metadata": {
         "id": "-Wep65ktFLlq"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2175,7 +2175,7 @@
         "id": "5kuOkcEJFLil",
         "outputId": "b1bd20bc-710d-4d34-dd9f-91034b0c0e75"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2207,7 +2207,7 @@
       "metadata": {
         "id": "g2aELYDPFLfv"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2224,7 +2224,490 @@
       "metadata": {
         "id": "Hg6PYIowFLci"
       },
-      "execution_count": 20,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def CountFactors(N):\n",
+        "  count = 0\n",
+        "  for i in range (1, int(N**0.5)+1):\n",
+        "    if N % i == 0:\n",
+        "      count += 1\n",
+        "\n",
+        "  if N == int(N**0.5) * int(N**0.5):\n",
+        "    return count*2-1\n",
+        "  else:\n",
+        "    return count*2\n",
+        "  pass\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "FwbrJBb2aJrv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "CountFactors(20)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VcziHZKMaJoE",
+        "outputId": "8346c9b3-c2a7-4993-d863-da1c118dfac3"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def CountFactorsolution(N):\n",
+        "    count = 0\n",
+        "    i = 1\n",
+        "    while(i*i)<N:\n",
+        "      if N % i == 0:\n",
+        "        count += 2\n",
+        "      i += 1\n",
+        "    if i * i == N:\n",
+        "      count += 1\n",
+        "\n",
+        "    return count"
+      ],
+      "metadata": {
+        "id": "OdilbjZ_aJk2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "CountFactorsolution(4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Thpra69JdygV",
+        "outputId": "325a2def-1cf9-440d-f8be-b63109bfeec4"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def CountNonDivisible(A):\n",
+        "  m = max(A)\n",
+        "  R = []\n",
+        "  counts = [0] * (m+1)\n",
+        "  for a in A:\n",
+        "    counts[a] += 1\n",
+        "\n",
+        "  for a in A:\n",
+        "    s=0\n",
+        "    sqrt = int(a**0.5) + 1\n",
+        "    for j in range(1, sqrt):\n",
+        "      if a % j == 0:\n",
+        "        s += counts[j]\n",
+        "        if(int(a/j) != j):\n",
+        "          s += counts[int(a/j)]\n",
+        "    R.append(len(A)-s)\n",
+        "\n",
+        "  return R"
+      ],
+      "metadata": {
+        "id": "zFnqdZ16dyc6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "CountNonDivisible([2,5,7,3,6])"
+      ],
+      "metadata": {
+        "id": "9LIaboGFdyaJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "94e70643-4fbc-479d-dcd4-8d2827a03e00"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[4, 4, 4, 4, 2]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Sieve of Eratosthenes"
+      ],
+      "metadata": {
+        "id": "9gk4u6_lxwVX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sieve(N):\n",
+        "  sieve = [1] * (N+1)\n",
+        "  sieve[0] = sieve[1] = 0\n",
+        "  i = 2\n",
+        "  while(i*i < N):\n",
+        "    if (sieve[i]):\n",
+        "      k = i*i\n",
+        "      while(k <= N):\n",
+        "        sieve[k] = 0\n",
+        "        k += 1\n",
+        "\n",
+        "    i += 1\n",
+        "  return sieve"
+      ],
+      "metadata": {
+        "id": "7PyLOmMEdyUm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sieve(20)"
+      ],
+      "metadata": {
+        "id": "UcSIVg0OdyR_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "00de23d3-4eea-4cad-b52d-136e4b5a9c15"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Euclidean algorithm"
+      ],
+      "metadata": {
+        "id": "raHEH-bQzhhU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def gcd100(a,b):\n",
+        "  print(a,b)\n",
+        "  if a == b:\n",
+        "    # print(a)\n",
+        "    return a\n",
+        "  if a > b:\n",
+        "    gcd100(a-b, b)\n",
+        "  else:\n",
+        "    gcd100(a, b-a)\n"
+      ],
+      "metadata": {
+        "id": "V8bQWhQheBtb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gcd100(10,20)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZjbmADBmeBp7",
+        "outputId": "91c6aa3f-ae22-4a25-e29e-9acb6dd1c556"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10 20\n",
+            "10 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def gcdDivision(a,b):\n",
+        "  if a % b == 0:\n",
+        "    return b\n",
+        "  else:\n",
+        "    return gcdDivision(b, a % b)"
+      ],
+      "metadata": {
+        "id": "8k9VH52_eBnE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gcdDivision(5,15)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fLSR_AGyeBkU",
+        "outputId": "ed2fe692-661c-4dd4-99fc-de9a57a4be14"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fibSeries(N):\n",
+        "  if N <= 1:\n",
+        "    return 1\n",
+        "  else:\n",
+        "    return fibSeries(N-1) +  fibSeries(N-2)"
+      ],
+      "metadata": {
+        "id": "_ZGFQTwDeBhj"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " fibSeries(5)"
+      ],
+      "metadata": {
+        "id": "AOP96ex5eBe0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f965661e-7bd7-457b-e1e3-4af1c0da1d5f"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fib_up_to(n):\n",
+        "    numbers = [1]\n",
+        "    i = 1\n",
+        "    while True:\n",
+        "        new_num = (numbers[-2] + numbers[-1]) if i > 1 else 2\n",
+        "        if new_num > n:\n",
+        "            break\n",
+        "        numbers.append(new_num)\n",
+        "        i += 1\n",
+        "    return numbers"
+      ],
+      "metadata": {
+        "id": "-NZMYfgncjVV"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fib_up_to(10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9OrYTdy-cjR_",
+        "outputId": "06d93ba3-7612-4632-96f0-bba1bf4d0926"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 5, 8]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Fibonacci numbers\n",
+        "FibFrog"
+      ],
+      "metadata": {
+        "id": "8bMjx0WRgVe7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fibonacci(n):\n",
+        "    fib = [1, 1]\n",
+        "    while fib[-1] < n:\n",
+        "        fib.append(fib[-1] + fib[-2])\n",
+        "    return fib"
+      ],
+      "metadata": {
+        "id": "1RXYFK7JfZ6p"
+      },
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fibFrog1(A):\n",
+        "  # write your code in Python 3.6\n",
+        "  A.append(1)\n",
+        "  target = len(A)\n",
+        "  fib = fibonacci(target)\n",
+        "  dp = {-1: 0}\n",
+        "  for i in range(target):\n",
+        "    if A[i] == 0: continue\n",
+        "    temp_result = []\n",
+        "    for jump in fib:\n",
+        "      if jump > i + 1:\n",
+        "        break\n",
+        "      if i - jump in dp:\n",
+        "        temp_result.append(dp[i - jump] + 1)\n",
+        "    if temp_result:\n",
+        "      dp[i] = min(temp_result)\n",
+        "  return dp.get(target - 1, -1)"
+      ],
+      "metadata": {
+        "id": "DPqjpzIHcjPU"
+      },
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fibFrog1([0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CUibTgKCcjMB",
+        "outputId": "bd9d2c9f-fe51-4229-d579-6ea1575ae86a"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_s0LsjIwcjI7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FGNyItfKci71"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
